# MapMakerCPP

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  MapMakerC++.cpp  MapMakerC++.h  OutdatedClasses.txt  README.md  TODO.txt  clangTidyProcedure.ps
App/: CMakeLists.txt
App/Include/: AppLayer.h  AtlasManager.hpp  Command.hpp  Config.hpp  FileExplorer.hpp  KeyboardManager.hpp  Menu.hpp  MenuLayer.h  NavBar.hpp  OverlayLayer.h  PaintBrush.hpp  PaintMode.hpp  PaletteCameraController.hpp  PaletteGrid.hpp  TileDef.hpp  TileGrid.hpp  World.hpp  WorldCameraController.hpp
App/Saves/Adwa/: Adwa.db
App/Saves/Cool123/: Cool123.db
App/Saves/Lol123/: Lol123.db
App/Saves/MapaMaior/: MapaMaior.db
App/Saves/NewNew/: NewNew.db
App/Saves/NewNew2/: NewNew2.db
App/Saves/SixSeven/: SixSeven.db
App/Saves/lolo/: lolo.db
App/Source/: AppLayer.cpp  Command.hpp  DataBase.hpp  Main.cpp  MenuLayer.cpp  PaintBrush.cpp  PaintBrush.hpp  TexturePalette.hpp  raygui.impl.cpp
Core/: CMakeLists.txt
Core/Source/Core/: Application.cpp  Application.h  ConfigCore.hpp  DataBaseManager.hpp  Event.h  InputEvents.h  Layer.h  PopUpWarnings.hpp  SaveData.hpp  SaveFileSystem.hpp  TileGrid.hpp  Window.cpp  Window.h  WindowEvents.h  main.cpp
include/: AtlasDictionary.hpp  Command.hpp  Config.hpp  DataBase.hpp  FileExplorer.hpp  HelpScreen.hpp  KeyboardManager.hpp  Menu.hpp  PaintBrush.hpp  PlayerMouse.hpp  SavesFileManager.hpp  TexturePalette.hpp  TileGrid.hpp  tinyfiles.hpp  utils.hpp  utilz.hpp
saves/: test.db
source/: main.cpp
